--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "katex": "^0.16.0",
     "mesmer": "0.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
