--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@emotion/styled": "^11.9.3",
     "katex": "^0.16.0",
     "mesmer": "0.0.4",
+    "prismjs": "^1.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
