--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/terminal"]
 	path = themes/terminal
-	url = https://github.com/hacksparr0w/hugo-theme-terminal.git
+	url = https://github.com/hacksparr0w/hugo-theme-terminal
